<resources>
    <string name="app_name">SmartFishTank</string>
    <string name="title">智能鱼缸监控</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="login_btn">立即登录</string>
    <string name="login_title">账号登录</string>
    <string name="login_hint">请输入手机号/邮箱</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="mailcode">短信验证码</string>
    <string name="register">注册账号</string>
    <string name="account_register">账号注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="register_input_phone_hint">请输入手机号</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="sms_code">短信验证码</string>
    <string name="passwd_format">密码格式：长度在8到16位字符之间，数字、大写字母、小写字母和特殊字符须至少包含三种</string>
    <string name="policy_info">点击"立即注册"，即表示您同意并愿意遵守</string>
    <string name="user_protocol">用户协议</string>
    <string name="private_policy">隐私政策</string>
    <string name="register_btn">立即注册</string>
    <string name="account_forgetpwd">找回密码</string>
    <string name="phone_retrieve">手机号找回</string>
    <string name="email_retrieve">邮箱找回</string>
    <string name="bind_phone_hint">请输入绑定的手机号</string>
    <string name="bind_email_hint">请输入绑定的邮箱</string>
    <string name="verify_code_img">验证码(点击刷新)</string>
    <string name="next_step">下一步</string>
    <string name="camera">相机</string>
    <string name="me">我的</string>
    <string name="light">灯光</string>
    <string name="wave">造浪</string>
    <string name="feedback">帮助与反馈</string>
    <string name="faq_description">欢迎反馈</string>
    <string name="about">关于</string>
    <string name="cloudStorage">云存储</string>
    <string name="shop">商城</string>
    <string name="smart_control_terminal">智能控制终端</string>
    <string name="version_code">版本号：</string>
    <string name="function_intro">功能介绍</string>
    <string name="friend_recommend">推荐好友</string>
    <string name="copyright">智能鱼缸版权所有\nCopyright © 2016-2017 All Rights Reserved.</string>
    <string name="app_version">1.0.0.0</string>
    <string name="check_new_version">检查新版本</string>
    <string name="logout_btn">退出登录</string>
    <string name="skipLogin">跳过>></string>
    <string name="support">支持</string>
    <string name="state">状态</string>
    <string name="setting">设置</string>
    <string name="article">精品文章</string>
    <string name="project_case">工程案例</string>
    <string name="aboutus">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="help">帮助</string>
    <string name="my_service">我的服务(售后进度)</string>
    <string name="share_network">分享我的网络</string>
    <string name="permission_setting">用户权限设置</string>
    <string name="firmware_upgrade">固件升级</string>
    <string name="device_version">设备版本</string>
    <string name="city">城市</string>
    <string name="temper">气温:</string>
    <string name="water_temper">鱼缸温度:</string>
    <string name="current_mode">当前模式</string>
    <string name="fan_speed">风扇转速</string>
    <string name="led_temperature">灯具温度</string>
    <string name="total_brightness">总亮度</string>
    <string name="led1">LIGHT1</string>
    <string name="configwifi">配置wifi</string>
    <string name="search_device">搜索设备</string>
    <string name="input_wifi_ssid">输入wifi ssid</string>
    <string name="ssid">wifi ssid</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="current_time">当前时间</string>
    <string name="custom">自定义</string>
    <string name="factory">出厂</string>
    <string name="mode1">模式一</string>
    <string name="mode2">模式二</string>
    <string name="mode3">模式三</string>
    <string name="mode4">模式四</string>
    <string name="wave_chart">造浪波形</string>
    <string name="manual_input_ip">手动输入ip</string>
    <string name="auto_search_device">自动搜索设备</string>
    <string name="input_ip">输入IP</string>
    <string name="input_ip_name">编辑名称</string>
    <string name="input_name_text">输入名称</string>
    <string name="loading">加载中...</string>
    <string name="config_failed">配置失败</string>
    <string name="config_timeout">超时</string>
    <string name="setting_auto">自动</string>
    <string name="setting_manual">手动</string>
    <string name="setting_video_wave">视频与造浪</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_timer">定时</string>
    <string name="setting_cloudy">多云</string>
    <string name="setting_thunderlight">闪电</string>
    <string name="mode_baozao">爆藻</string>
    <string name="mode_sps">SPS</string>
    <string name="mode_user">用户</string>
    <string name="mode_nps">NPS</string>
    <string name="mode_lps">LPS</string>
    <string name="factory_pre_mode">出厂预设模式</string>
    <string name="inner_temperature">室温</string>
    <string name="current_temperature">3000K</string>
    <string name="brightness">亮度</string>
    <string name="manual_setting">手动设置</string>
    <string name="videoandwave">视频与造浪</string>
    <string name="user">用户</string>
    <string name="begin_time">开始</string>
    <string name="end_time">停止</string>
    <string name="save">保存</string>
    <string name="thunderlight">闪电</string>
    <string name="effect">亮度:</string>
    <string name="run_instant">立即运行</string>
    <string name="cloudy">多云</string>
    <string name="setting_time">设置时间</string>
    <string name="save_success">保存成功</string>
    <string name="moon_phase_switch">月相开关</string>
    <string name="night_mode">夜间模式</string>
    <string name="feed">喂食</string>
    <string name="power">功率</string>
    <string name="frequency">频率</string>
    <string name="decrease">-</string>
    <string name="timing_lable">定时</string>
    <string name="location_fail_tip">定位失败，请检查网络</string>
    <string name="sunny">晴</string>
    <string name="citychar">市</string>

    <string name="s100">晴</string>
    <string name="s101">多云</string>
    <string name="s102">少云</string>
    <string name="s103">晴间多云</string>
    <string name="s104">阴</string>
    <string name="s200">有风</string>
    <string name="s201">平静</string>
    <string name="s202">微风</string>
    <string name="s203">和风</string>
    <string name="s204">清风</string>
    <string name="s205">强风/劲风</string>
    <string name="s206">疾风</string>
    <string name="s207">大风</string>
    <string name="s208">烈风</string>
    <string name="s209">风暴</string>
    <string name="s210">狂爆风</string>
    <string name="s211">飓风</string>
    <string name="s212">龙卷风</string>
    <string name="s213">热带风暴</string>
    <string name="s300">阵雨</string>
    <string name="s301">强阵雨</string>
    <string name="s302">雷阵雨</string>
    <string name="s303">强雷阵雨</string>
    <string name="s304">雷阵雨伴有冰雹</string>
    <string name="s305">小雨</string>
    <string name="s306">中雨</string>
    <string name="s307">大雨</string>
    <string name="s308">极端降雨</string>
    <string name="s309">毛毛雨/细雨</string>
    <string name="s310">暴雨</string>
    <string name="s311">大暴雨</string>
    <string name="s312">特大暴雨</string>
    <string name="s313">冻雨</string>
    <string name="s400">小雪</string>
    <string name="s401">中雪</string>
    <string name="s402">大雪</string>
    <string name="s403">暴雪</string>
    <string name="s404">雨夹雪</string>
    <string name="s405">雨雪天气</string>
    <string name="s406">阵雨夹雪</string>
    <string name="s407">阵雪</string>
    <string name="s500">薄雾</string>
    <string name="s501">雾</string>
    <string name="s502">霾</string>
    <string name="s503">扬沙</string>
    <string name="s504">浮尘</string>
    <string name="s506">火山灰</string>
    <string name="s507">沙尘暴</string>
    <string name="s508">强沙尘暴</string>
    <string name="s900">热</string>
    <string name="s901">冷</string>
    <string name="s999">未知</string>
    <string name="increase">+</string>
    <string name="add_timing_line_warn">该时间已经存在，请重新设置</string>

    <string name="delete">删除</string>

</resources>
