<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/ivHead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/titleBarBg"
            android:scaleType="fitXY" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:layout_centerInParent="true">

            <com.tfxiaozi.smartfishtank.widget.CircleImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_user_def"
                app:border_color="#BABABA"
                />

        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llMyService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/my_service"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />

            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llShareNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/share_network"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />

            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/feedback"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />

            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llPermissionSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/permission_setting"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />


            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llFirmwareUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/firmware_upgrade"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />

            <com.tfxiaozi.smartfishtank.widget.LabelLayout
                android:id="@+id/tv_llDeviceVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_icon="@mipmap/ic_faq_feedback"
                app:layout_title="@string/device_version"
                app:devider_line_color="@color/line_color"
                android:visibility="visible"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>