<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

   <com.tfxiaozi.smartfishtank.widget.PowerIndicator
        android:id="@+id/pi_indicator"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:indicator_border_color="#666666"
        app:indicator_content_color="@color/titleBarBg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:id="@+id/rl_wave_chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/pi_indicator"
        >
        <TextView
            android:id="@+id/tv_graph_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/titleBarBg"
            android:textSize="@dimen/text_size_12"
            android:text="@string/wave_chart"
            android:layout_margin="5dp"
            />
        <com.tfxiaozi.smartfishtank.widget.LineView
            android:id="@+id/line"
            android:layout_centerInParent="true"
            android:layout_width="1024dp"
            android:layout_height="576dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_mode_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_below="@id/rl_wave_chart"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_mode1"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/mode1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_iv_selector"
            />
        <Button
            android:id="@+id/btn_mode2"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/mode2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_iv_selector"
            />

        <Button
            android:id="@+id/btn_mode3"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/mode3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_iv_selector"
            />

        <Button
            android:id="@+id/btn_mode4"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/mode4"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:background="@drawable/btn_iv_selector"
            />

    </LinearLayout>




</RelativeLayout>